improve GUI, modify path files