@@ -2,6 +2,7 @@ package Utils;
 
 import java.io.IOException;
 
+import java.nio.file.Path;
 import java.util.concurrent.TimeUnit;
 
 
@@ -10,7 +11,9 @@ public class Tool {
     public static void command(String command) {
         Process process = null;
         try {
-            process = Runtime.getRuntime().exec(command);
+            ProcessBuilder processBuilder = new ProcessBuilder(command.split(" "));
+            processBuilder.redirectErrorStream(true);
+            process = processBuilder.start();
             process.waitFor(120, TimeUnit.SECONDS);
         } catch (IOException | InterruptedException e) {
             System.err.println("Cannot execute command: " + e);
@@ -28,8 +31,14 @@ public class Tool {
                 }
             } catch (InterruptedException e) {
                 System.err.println("Error while waiting for process to end: " + e.getMessage());
+                Thread.currentThread().interrupt();
             }
         }
+    }
+    public static String getFileExtension(Path file) {
+        String fileName = file.getFileName().toString();
+        int dotIndex = fileName.lastIndexOf('.');
+        return (dotIndex == -1) ? "" : fileName.substring(dotIndex + 1);
     }
 }
 
